[package]
name = "wot-esp-demo"
version = "0.1.0"
authors = [ "Luca Barbato <lu_zero@gentoo.org>"]
edition = "2021"
resolver = "2"
license = "MIT OR Apache-2.0"

[profile.release]
opt-level = "s"

[profile.dev]
debug     = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[dependencies]
anyhow       = "1.0.75"
embedded-svc = "0.27.0"
esp-idf-svc  = "0.48.0"
heapless = "0.8.0"
log = "0.4.20"
serde_json = "1.0.108"
shtcx        = "0.11.0"
toml-cfg     = "0.1.3"
wot-td = "0.3.1"

[[package.metadata.esp-idf-sys.extra_components]]
remote_component = { name = "espressif/mdns", version = "1.2" }

[build-dependencies]
embuild  = "0.31.4"
toml-cfg = "0.1.3"

# See https://github.com/rust-lang/cc-rs/issues/1005
[patch.crates-io]
cc = { git = "https://github.com/rust-lang/cc-rs", tag = "1.0.83" }
